# fastapi_resizer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: .env.example  config.py  main.py  service.py
systemd/: example.service
